# HyQ

./: .gitignore  Readme.md  setup.cfg
HyQ/: __init__.py  model.py  model_backend.py  theis.py
docs/nb/: spatial_example_1.ipynb
hyq/: __init__.py  data_retrieval.py  model.py  model_backend.py  theis.py  wells.py
hyq/data/: exp1_pseudoH0.tif  sptutorial_1.gpkg
