[metadata]
name = hyq
version = 0.0.900
author = Dr. Sören Wilke
author_email = your@email.address
url = https://github.com/Ignimbrit/HyQ
description = Analytical groundwater modeling using Theis Well Equation
long_description = file: Readme.md
long_description_content_type = text/markdown
keywords = hydrogeology, geology, hydrology, groundwater
license = GNU GPLv3 License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy
    rasterio
    geopandas
    matplotlib
    GDAL


[options.package_data]
data = "exp1_pseudoH0.tif"
* = README.md